--- a/css/main.css
+++ b/css/main.css
@@ -403,16 +403,16 @@ a {
 .cta {
   padding: 20px 30px;
   display: inline-block;
-  background-color: #ebebeb;
   color: #7b7b7b;
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
+  background: #ebebeb;
 }
 
 .cta:hover {
-  background-color: #66cccc;
-  transition: 0.5s;
+  background: linear-gradient(to right, #66cccc, #ec008c);
+  transition: 0.2s ease-in-out;
   color: #fafafa;
   animation: forwards;
 }
@@ -434,18 +434,143 @@ a {
   height: 50px;
   width: 50px;
   border-radius: 100%;
+  transition: background-color 0.5s ease-in-out; /* Agregamos una transición suave para el cambio de color */
 }
 
-.pasoN {
-  color: #ebebeb;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
+.paso.active {
+  background-color: #f00; /* Cambiamos el color de fondo cuando la clase "active" está presente */
 }
 
-.pasosCopy {
-  margin: 36px 0;
+.form {
+  position: relative;
+  max-width: 40rem;
+  padding: 10rem 0;
+  margin: 3vh;
+  color: #fbfbfb;
+  background-color: #fbfbfb;
+  border-radius: 1rem;
+  box-shadow: 0 1px 1rem rgba(0, 0, 0, 0.1);
+  isolation: isolate;
+}
+
+.form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10rem;
+  background: linear-gradient(to left, #66cccc, #e0148e);
+  border-radius: 1rem 1rem 100% 100%;
+  z-index: -1;
+}
+
+.form__title {
+  position: absolute;
+  top: 3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2.5rem;
+}
+
+.form > form {
+  padding: 2.5rem;
+  background-color: inherit;
+}
+
+.form__input {
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  margin: 0 auto;
+}
+
+.form__input > i {
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: #66cccc;
+}
+
+.form__input input {
+  position: relative;
+  width: 100%;
+  font: inherit;
+  padding: 1rem 0;
+  margin-top: 0.5rem;
+  border: none;
+  outline: none;
+}
+
+.form__input .bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 1px;
+}
+
+.form__input .bar::before {
+  content: "";
+  position: absolute;
+  background-color: #66cccc;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
+}
+
+.form__input > input:focus + .bar::before {
+  transform: scaleX(1);
+}
+
+.form__button {
+  display: block;
+  margin: 2.5rem auto 3rem;
+  padding: 1rem 5rem;
+  background: linear-gradient(to left, #66cccc, #ec008c);
+  color: #fbfbfb;
+  font: inherit;
+  border: 0.5rem solid #fbfbfb;
+  outline: none;
+  cursor: pointer;
+  border-radius: 3rem;
+}
+
+.form__button:hover {
+  background: linear-gradient(to right, #66cccc, #ec008c);
+}
+
+.form__switch {
+  display: block;
   text-align: center;
+  font-size: 1.5rem;
+  color: #a1a1a1;
+}
+
+.form__switch a {
+  text-decoration: none;
+  color: #66cccc;
+}
+
+.form__switch a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (min-width: 43.75em) {
+  .form::before {
+    height: 30rem;
+  }
+  .form__title {
+    left: 10rem;
+    transform: none;
+  }
+  .form > form {
+    transform: translateX(10rem);
+    border-radius: inherit;
+    box-shadow: inherit;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
