--- a/scss/_pasos.scss
+++ b/scss/_pasos.scss
@@ -1,6 +1,3 @@
-.pasosContainer{
-
-}
 .pasos{
     height: auto;
     display: flex;
@@ -8,8 +5,9 @@
     flex-direction: column;
     align-items: center;
     margin: 0 36px;
-}
-.paso{
+  }
+  
+  .paso{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,14 +15,9 @@
     height: 50px;
     width: 50px;
     border-radius: 100%;
-}
-.pasoN{
-    color: #ebebeb;
-    font-weight: 700;
-    margin: 0;
-    padding: 0;
-}
-.pasosCopy{
-    margin: 36px 0;
-    text-align: center;
-}
+    transition: background-color 0.5s ease-in-out; /* Agregamos una transición suave para el cambio de color */
+  }
+  
+  .paso.active{
+    background-color: #f00; /* Cambiamos el color de fondo cuando la clase "active" está presente */
+  }
