--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -38,7 +38,7 @@
 }
 
 .cta:hover {
-  background: linear-gradient(to right, #66cccc, #ec008c);
+  background: #66cccc;
   transition:  .2s ease-in-out;
   color: #fafafa;
   animation: forwards;
