--- a/scss/_pasos.scss
+++ b/scss/_pasos.scss
@@ -5,9 +5,8 @@
     flex-direction: column;
     align-items: center;
     margin: 0 36px;
-  }
-  
-  .paso{
+}
+.paso{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,9 +14,15 @@
     height: 50px;
     width: 50px;
     border-radius: 100%;
-    transition: background-color 0.5s ease-in-out; /* Agregamos una transición suave para el cambio de color */
-  }
-  
-  .paso.active{
-    background-color: #f00; /* Cambiamos el color de fondo cuando la clase "active" está presente */
-  }
+    transition: background-color 0.3s ease; /* Agrega una transición suave al cambio de color de fondo */
+}
+.pasoN{
+    color: #ebebeb;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+}
+.pasosCopy{
+    margin: 36px 0;
+    text-align: center;
+}
