--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -84,6 +84,7 @@
 
 .form__button {
     display: block;
+    text-align: center;
     margin: 2.5rem auto 3rem;
     padding: 1rem 5rem;
     background: black;
