--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -8,6 +8,9 @@
 body{
   font-family: 'Amiko', sans-serif;
 }
+a:link, a:visited, a:active {
+    text-decoration:none;
+}
 .title{
     display: inline-block;
     padding: 5vh;
