--- a/scss/_preloader.scss
+++ b/scss/_preloader.scss
@@ -1,27 +1,23 @@
 #preloader {
     position: fixed;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
-    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    background: #ebebeb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 9999;
   }
-  
   #loader {
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    border: 10px solid #ddd;
-    border-top-color: #333;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    margin: -30px 0 0 -30px;
-    animation: spin 1.5s linear infinite;
+    width: 50px;
+    animation: ss 2s linear;
   }
-  
-  @keyframes spin {
-    to {transform: rotate(360deg);}
+  @keyframes ss {
+    0% {scale: .8; opacity: 0; filter:brightness(0);}
+    50% {scale: .9; opacity: 50; color: black;}
+    100% {scale: 1; opacity: 100; color: #33cccc;}
   }
+
+ 
