--- a/scss/_pasos.scss
+++ b/scss/_pasos.scss
@@ -10,14 +10,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0b0b0b;
+    background-color: $VeertienBlack;
     height: 50px;
     width: 50px;
     border-radius: 100%;
     transition: background-color 0.3s ease; /* Agrega una transición suave al cambio de color de fondo */
 }
 .pasoN{
-    color: #ebebeb;
+    color: $VeertienWhite;
     font-weight: 700;
     margin: 0;
     padding: 0;
