--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -35,13 +35,25 @@
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
-  background: #ebebeb;
+  background: $VeertienWhite;
 }
 
 .cta:hover {
-  background: #66cccc;
+  background: $VeertienBlue;
   transition:  .2s ease-in-out;
-  color: #fafafa;
+  color: $VeertienWhite;
   animation: forwards;
 }
 
+.carousel-control-next-icon:hover{
+  transition: .3s;
+  scale: 1.3;
+  background-color: $VeertienBlue;
+  border-radius: 100%;
+}
+.carousel-control-prev-icon:hover{
+  transition: .3s;
+  scale: 1.3;
+  background-color: $VeertienBlue;
+  border-radius: 100%;
+}
