--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,69 +1,68 @@
 i {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 .footer {
-    padding-block: 5rem;
-    background-color: $VeertienBlue;
-    color: $VeertienWhite;
+  padding-block: 5rem;
+  background-color: $VeertienBlue;
+  color: $VeertienWhite;
 }
 .footer__container {
-    max-width: 116rem;
-    margin: auto;
-    padding: 0 1.5rem;
+  max-width: 116rem;
+  margin: auto;
+  padding: 0 1.5rem;
 }
 
 .footer__top {
-    display: grid;
-    grid-template-columns: 
-    repeat(auto-fit, minmax(20rem, 1fr));
-    row-gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  row-gap: 2rem;
 }
 .footer__title {
-    font-size: 1.8rem;
-    color: $VeertienWhite;
-    font-weight: 500;
-    margin-bottom: 2rem;
+  font-size: 1.8rem;
+  color: $VeertienWhite;
+  font-weight: 500;
+  margin-bottom: 2rem;
 }
 .footer__list {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 .footer__list-item {
-    list-style: none;
+  list-style: none;
 }
 .footer__list-link {
-    text-decoration: none;
-    color: inherit;
-    transition: color .25s;
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.25s;
 }
 .footer__list-link:hover {
-    color: $VeertienWhite;
+  color: $VeertienWhite;
 }
 
 .company__info {
-    grid-column: 1/-1;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    padding-right: 5rem;
+  grid-column: 1/-1;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding-right: 5rem;
 }
 .company__logo {
-    color: $VeertienWhite;
+  color: $VeertienWhite;
 }
 .company__info ul {
-    flex-direction: row;
+  flex-direction: row;
 }
 .copyright {
-    margin-top: auto;
+  margin-top: auto;
 }
 @media screen and (min-width: 40em) {
-    .company__info {
-        grid-column: span 2;
-    }
+  .company__info {
+    grid-column: span 2;
+  }
 }
 
-.imgFooter{
-    filter:brightness(100);
-    height: 36px;
+.imgFooter {
+  filter: brightness(100);
+  height: 36px;
 }
