--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,135 +1,135 @@
 .form {
-    position: relative;
-    max-width: 40rem;
-    padding: 10rem 0;
-    margin: 3vh;
-    color: $VeertienWhite;
-    background-color: White;
-    border-radius: 1rem;
-    box-shadow: 0 1px 1rem rgba(0, 0, 0, .1);
-    isolation: isolate;
+  position: relative;
+  max-width: 40rem;
+  padding: 10rem 0;
+  margin: 3vh;
+  color: $VeertienWhite;
+  background-color: White;
+  border-radius: 1rem;
+  box-shadow: 0 1px 1rem rgba(0, 0, 0, 0.1);
+  isolation: isolate;
 }
 
 .form::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10rem;
-    background: $VeertienBlack;
-    border-radius: 1rem 1rem 100% 100%;
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10rem;
+  background: $VeertienBlack;
+  border-radius: 1rem 1rem 100% 100%;
+  z-index: -1;
 }
 
 .form__title {
-    position: absolute;
-    top: 3.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 2.5rem;
+  position: absolute;
+  top: 3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2.5rem;
 }
 
-.form>form {
-    padding: 2.5rem;
-    background-color: inherit;
+.form > form {
+  padding: 2.5rem;
+  background-color: inherit;
 }
 
 .form__input {
-    position: relative;
-    display: flex;
-    align-items: baseline;
-    margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  margin: 0 auto;
 }
 
-.form__input>i {
-    font-size: 2rem;
-    margin-right: 1rem;
-    color: $VeertienBlue;
+.form__input > i {
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: $VeertienBlue;
 }
 
 .form__input input {
-    position: relative;
-    width: 100%;
-    font: inherit;
-    padding: 1rem 0;
-    margin-top: .5rem;
-    border: none;
-    outline: none;
+  position: relative;
+  width: 100%;
+  font: inherit;
+  padding: 1rem 0;
+  margin-top: 0.5rem;
+  border: none;
+  outline: none;
 }
 
 .form__input .bar {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .1);
-    width: 100%;
-    height: 1px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 1px;
 }
 
 .form__input .bar::before {
-    content: "";
-    position: absolute;
-    background-color: $VeertienBlue;
-    width: 100%;
-    height: 2px;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform .5s;
+  content: "";
+  position: absolute;
+  background-color: $VeertienBlue;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
 }
 
-.form__input>input:focus+.bar::before {
-    transform: scaleX(1);
+.form__input > input:focus + .bar::before {
+  transform: scaleX(1);
 }
 
 .form__button {
-    display: block;
-    text-align: center;
-    margin: 2.5rem auto 3rem;
-    padding: 1rem 5rem;
-    background: $VeertienBlack;
-    color: $VeertienWhite;
-    font: inherit;
-    border: .5rem solid rgb(243, 243, 243);
-    outline: none;
-    cursor: pointer;
-    border-radius: 3rem;
+  display: block;
+  text-align: center;
+  margin: 2.5rem auto 3rem;
+  padding: 1rem 5rem;
+  background: $VeertienBlack;
+  color: $VeertienWhite;
+  font: inherit;
+  border: 0.5rem solid rgb(243, 243, 243);
+  outline: none;
+  cursor: pointer;
+  border-radius: 3rem;
 }
 
 .form__button:hover {
-    background: $VeertienBlue;
-    transition: .4s;
+  background: $VeertienBlue;
+  transition: 0.4s;
 }
 
 .form__switch {
-    display: block;
-    text-align: center;
-    font-size: 1.5rem;
-    color: #a1a1a1;
+  display: block;
+  text-align: center;
+  font-size: 1.5rem;
+  color: #a1a1a1;
 }
 
 .form__switch a {
-    text-decoration: none;
-    color: $VeertienBlue;
+  text-decoration: none;
+  color: $VeertienBlue;
 }
 
 .form__switch a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 43.75em) {
-    .form::before {
-        height: 30rem;
-    }
+  .form::before {
+    height: 30rem;
+  }
 
-    .form__title {
-        left: 10rem;
-        transform: none;
-    }
+  .form__title {
+    left: 10rem;
+    transform: none;
+  }
 
-    .form>form {
-        transform: translateX(10rem);
-        border-radius: inherit;
-        box-shadow: inherit;
-    }
+  .form > form {
+    transform: translateX(10rem);
+    border-radius: inherit;
+    box-shadow: inherit;
+  }
 }
