--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,68 +1,78 @@
-.logo img{
-   height: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.caja{
-    background-color: $VeertienWhite;
-}
-.nav_container{
-    height: 56px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* Estilos para el ícono del Menú */
-.icono-menu{
-    position: fixed;
-    margin-right: calc(100vw - 7vh);
-    z-index: 10;
-}
-
-.icono-menu img{
-    vertical-align: top;
-    width: 22px;
-    cursor: pointer;
-}
-
-/* Estilos para el contenedor del Menú */
-.cont-menu{
-    background-color: $VeertienBlack;
-    box-shadow: 2px 0px 5px 2px rgb(66,66,66);
-    width: 400px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: all .5s ease;
-    z-index: 8;
-}
-
-/* Estilos por agregar en JavaScript */
-.active_nav{
-    transform: translate(-600px);
-}
-
-/* Estilos para el listado del Menú */
-.cont-menu .ul_hamburguer{
-    padding: 100px 0px 20px 0px;
+nav {
+  transition: all ease-in-out 1s;
+  background: $VeertienWhite;
+  border-bottom: 2.5px solid $VeertienBlue;
+  padding: 10px 20px;
+  width: 100%;
+  height: 65px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10; }
+  nav .logo {
+    width: 100px; }
+  nav ul {
     list-style: none;
-}
+    position: absolute;
+    top: 65px;
+    right: 0;
+    background: $VeertienBlue;
+    width: 50%;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: clip-path .8s ease-out;
+    z-index: 50; }
+    nav ul .opciones {
+      width: 100%;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 80; }
+      nav ul .opciones li {
+        width: 180px;
+        margin: 20px 0; }
+        nav ul .opciones li a {
+          font-weight: 500;
+          color: $VeertienWhite;
+          padding: 10px 30px;
+          border-bottom: 2px solid transparent;
+          transition: all ease-in .8s; }
+          nav ul .opciones li a:hover {
+            border-bottom: 2px solid $VeertienRed;
+            color: $VeertienWhite; }
+  nav .menu {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    position: relative;
+    z-index: 20;
+    cursor: pointer; }
+    nav .menu span {
+      width: 100%;
+      height: 3px;
+      border-radius: 4px;
+      display: block;
+      position: absolute;
+      background: $VeertienBlack;
+      transition: all 0.25s ease;
+      transform-origin: 0px 100%; }
+    nav .menu span:nth-child(2) {
+      top: calc(50% - 2px); }
+    nav .menu span:nth-child(3) {
+      bottom: 0; }
 
-.cont-menu .ul_hamburguer .li_hamburguer{
-    color: $VeertienWhite;
-    display: block;
-    font-size: 25px;
-    text-decoration: none;
-    padding: 10px 50px;
-    cursor: pointer;
-}
+.animacionMenu span:nth-child(1) {
+  transform: rotate(45deg) translate(-2px, 1px); }
 
-.cont-menu .ul_hamburguer .li_hamburguer:hover{
-    background-color: $VeertienBlue;
-    transition: .5s;
-    color: $VeertienWhite;
-    font-weight: 500;
-}
+.animacionMenu span:nth-child(2) {
+  opacity: 0; }
+
+.animacionMenu span:nth-child(3) {
+  transform: rotate(-45deg) translate(-3px, 3px); }
+
+.activeMenu {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
