--- a/scss/_preloader.scss
+++ b/scss/_preloader.scss
@@ -1,23 +1,33 @@
 #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: $VeertienWhite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $VeertienWhite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+#loader {
+  width: 50px;
+  animation: ss 2s linear;
+}
+@keyframes ss {
+  0% {
+    scale: 0.8;
+    opacity: 0;
+    filter: brightness(0);
   }
-  #loader {
-    width: 50px;
-    animation: ss 2s linear;
+  50% {
+    scale: 0.9;
+    opacity: 50;
+    color: $VeertienBlack;
   }
-  @keyframes ss {
-    0% {scale: .8; opacity: 0; filter:brightness(0);}
-    50% {scale: .9; opacity: 50; color: $VeertienBlack;}
-    100% {scale: 1; opacity: 100; color: $VeertienBlue;}
+  100% {
+    scale: 1;
+    opacity: 100;
+    color: $VeertienBlue;
   }
-
- 
+}
