--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,10 +1,3 @@
-.caja__main {
-  height: 85vh;
-  width: 100%;
-  display: inline-block;
-  padding: 0;
-}
-
 .caja__textos {
   margin: 0;
   padding-bottom: 3vh;
@@ -20,9 +13,8 @@
 .title__active {
   font-weight: 700;
   transform-origin: center;
-  transition: opacity .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
 }
-
 
 .text__active {
   font-weight: 700;
@@ -40,20 +32,18 @@
 
 .cta:hover {
   background: $VeertienBlue;
-  transition:  .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   color: $VeertienWhite;
   animation: forwards;
 }
 
-.carousel-control-next-icon:hover{
-  transition: .3s;
+.carousel-control-next-icon:hover {
+  transition: 0.3s;
   scale: 1.3;
-  background-color: $VeertienBlue;
   border-radius: 100%;
 }
-.carousel-control-prev-icon:hover{
-  transition: .3s;
+.carousel-control-prev-icon:hover {
+  transition: 0.3s;
   scale: 1.3;
-  background-color: $VeertienBlue;
   border-radius: 100%;
 }
