--- a/css/main.css
+++ b/css/main.css
@@ -307,10 +307,9 @@ a {
 nav {
   transition: all ease-in-out 1s;
   background: #ebebeb;
-  border-bottom: 2.5px solid #44b9e5;
   padding: 10px 20px;
   width: 100%;
-  height: 65px;
+  height: 56px;
   position: fixed;
   top: 0;
   left: 0;
@@ -332,7 +331,7 @@ nav ul {
   background: #44b9e5;
   width: 50%;
   clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-  transition: clip-path 0.8s ease-out;
+  transition: 0.5s step-end;
   z-index: 50;
 }
 
@@ -379,7 +378,7 @@ nav .menu span {
   border-radius: 4px;
   display: block;
   position: absolute;
-  background: #1b1b1b;
+  background: #ebebeb;
   transition: all 0.25s ease;
   transform-origin: 0px 100%;
 }
