--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,10 +1,9 @@
 nav {
   transition: all ease-in-out 1s;
   background: $VeertienWhite;
-  border-bottom: 2.5px solid $VeertienBlue;
   padding: 10px 20px;
   width: 100%;
-  height: 65px;
+  height: 56px;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,7 +21,7 @@ nav {
     background: $VeertienBlue;
     width: 50%;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    transition: clip-path .8s ease-out;
+    transition: .5s step-end;
     z-index: 50; }
     nav ul .opciones {
       width: 100%;
@@ -57,7 +56,7 @@ nav {
       border-radius: 4px;
       display: block;
       position: absolute;
-      background: $VeertienBlack;
+      background: $VeertienWhite;
       transition: all 0.25s ease;
       transform-origin: 0px 100%; }
     nav .menu span:nth-child(2) {
