--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  font-size: 1rem;
   font-family: "Amiko", sans-serif;
 }
 
@@ -60,7 +61,7 @@ main {
 
 .content {
   width: 240px;
-  font-size: 20px;
+  font-size: 1rem;
   line-height: 40px;
   color: #ebebeb;
   height: 40px;
@@ -319,8 +320,8 @@ nav {
   z-index: 10;
 }
 
-nav .logo {
-  width: 120px;
+.logo_nav {
+  height: 22px;
 }
 
 nav ul {
@@ -407,6 +408,18 @@ nav .menu span:nth-child(3) {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
+.img_carousel {
+  height: calc(100vh + 1rem);
+  width: 100%;
+}
+
+#gradient {
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
+}
+
 .caja__textos {
   margin: 0;
   padding-bottom: 3vh;
@@ -415,7 +428,7 @@ nav .menu span:nth-child(3) {
 }
 
 .title_section1 {
-  font-size: 40px;
+  font-size: 2rem;
   text-align: left;
   font-weight: 300;
 }
@@ -426,14 +439,18 @@ nav .menu span:nth-child(3) {
   transition: opacity 0.5s ease-in-out;
 }
 
+.text {
+  font-size: 1rem;
+}
+
 .text__active {
   font-weight: 700;
 }
 
 .cta {
-  padding: 20px 30px;
+  padding: 1rem;
   display: inline-block;
-  color: #7b7b7b;
+  color: #1b1b1b;
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
@@ -793,13 +810,14 @@ i {
 }
 
 .shareButton, .shareButton.open {
+  scale: 1.3;
   border: none;
   border-radius: 50%;
   background: #44b9e5;
   padding: 1rem;
   overflow: hidden;
   outline: none;
-  margin: 0.5rem;
+  margin: 1rem;
   width: 24px;
   height: 24px;
   box-sizing: content-box;
