--- a/scss/_botonFlotante.scss
+++ b/scss/_botonFlotante.scss
@@ -48,13 +48,14 @@
 }
 
 .shareButton, .shareButton.open {
+  scale: 1.3;
   border: none;
   border-radius: 50%;
   background: $VeertienBlue;
   padding: 1rem;
   overflow: hidden;
   outline: none;
-  margin: 0.5rem;
+  margin: 1rem;
   width: 24px;
   height: 24px;
   box-sizing: content-box;
