--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,5 +1,14 @@
-
-
+.img_carousel{
+  height: calc(100vh + 1rem);
+  width: 100%;
+}
+#gradient
+{
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
+}
 .caja__textos {
   margin: 0;
   padding-bottom: 3vh;
@@ -7,7 +16,7 @@
   display: block;
 }
 .title_section1 {
-  font-size: 40px;
+  font-size: 2rem;
   text-align: left;
   font-weight: 300;
 }
@@ -17,15 +26,17 @@
   transform-origin: center;
   transition: opacity 0.5s ease-in-out;
 }
-
+.text{
+  font-size: 1rem;
+}
 .text__active {
   font-weight: 700;
 }
 
 .cta {
-  padding: 20px 30px;
+  padding: 1rem;
   display: inline-block;
-  color: #7b7b7b;
+  color:$VeertienBlack;
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
@@ -49,3 +60,5 @@
   scale: 1.3;
   border-radius: 100%;
 }
+
+
