--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -284,3 +284,14 @@ a {
 .video {
   width: 100vw;
 }
+
+
+.section2{
+  padding: 100px 0;
+  background-color: $VeertienBlack;
+  display: inline-block;
+}
+.mockup{
+  object-fit: cover;
+  width: 100vw;
+}
