--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+main {
+  background-color: #F8FAFA;
+}
+
 body {
   font-size: 1rem;
   font-family: "Amiko", sans-serif;
@@ -18,307 +22,47 @@ a:active {
 }
 
 .title {
+  font-size: 2.5rem;
   display: inline-block;
   padding: 5vh;
   text-align: center;
-  color: #1b1b1b;
+  color: #0A0D13;
 }
 
 .copy {
+  font-size: 1rem;
   display: inline-block;
   text-align: left;
   padding: 0 3vh;
   padding-bottom: 3vh;
 }
 
-.titleB {
-  text-align: center;
-  padding: 3vh 0;
-  color: #ebebeb;
+.title_invert {
+  color: #F8FAFA;
 }
 
-.subtitle {
-  margin: 0 20px;
-  padding: 0;
-}
-
-main {
-  background-color: #ebebeb;
-}
-
-.skills {
-  background-color: #1b1b1b;
-}
-
-.img_carousel {
-  height: 200px;
-  scale: 1.5;
-}
-
-.carousel {
-  display: inline-block;
-}
-
-.content {
-  width: 240px;
-  font-size: 1rem;
-  line-height: 40px;
-  color: #ebebeb;
-  height: 40px;
-  position: relative;
-  margin: 10vh auto;
-}
-.content:before {
-  content: "[";
-  position: absolute;
-  left: -50px;
-  line-height: 40px;
-}
-.content:after {
-  content: "]";
-  position: absolute;
-  right: -50px;
-  line-height: 40px;
-}
-.content:after, .content:before {
-  color: #ebebeb;
-  font-size: 42px;
-  animation: 2s linear 0s normal none infinite opacity;
-  -webkit-animation: 2s ease-out 0s normal none infinite opacity;
-  -moz-animation: 2s ease-out 0s normal none infinite opacity;
-  -o-animation: 2s ease-out 0s normal none infinite opacity;
-}
-
-.visible {
-  float: left;
-  font-weight: 600;
-  overflow: hidden;
-  height: 40px;
-}
-
-.p_nav {
-  display: inline;
-  float: left;
-  margin: 0;
-}
-
-.ul_nav {
-  margin-top: 0;
-  padding-left: 100px;
-  text-align: left;
-  list-style: none;
-  animation: 6s linear 0s normal none infinite change;
-  -webkit-animation: 6s linear 0s normal none infinite change;
-  -moz-animation: 6s linear 0s normal none infinite change;
-  -o-animation: 6s linear 0s normal none infinite change;
-}
-
-.ul_nav .li_mav {
-  line-height: 40px;
-  margin: 0;
-}
-
-@-webkit-keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@-webkit-keyframes change {
-  0% {
-    margin-top: 0;
-  }
-  15% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -40px;
-  }
-  40% {
-    margin-top: -40px;
-  }
-  50% {
-    margin-top: -80px;
-  }
-  65% {
-    margin-top: -80px;
-  }
-  75% {
-    margin-top: -40px;
-  }
-  85% {
-    margin-top: -40px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-@keyframes change {
-  0% {
-    margin-top: 0;
-  }
-  15% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -40px;
-  }
-  40% {
-    margin-top: -40px;
-  }
-  50% {
-    margin-top: -80px;
-  }
-  65% {
-    margin-top: -80px;
-  }
-  75% {
-    margin-top: -40px;
-  }
-  85% {
-    margin-top: -40px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-.descubrinos {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.filosofia {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 100px 20px;
-  padding: 20px;
-  border-radius: 20px;
-  background-size: cover;
-  background-image: url(/img/sea-7423274_640.jpg);
-}
-
-.filo_img {
-  filter: invert(1);
-}
-
-.filo_imgb {
-  margin: 100px 0;
-  height: 200px;
-  transition: 0.5s;
-}
-
-.front_filo_img {
-  position: relative;
-}
-
-.back_filo_img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-}
-
-.filo_imgb:active {
-  translate: 35vw;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 0;
-}
-
-.card_ {
-  border-radius: 8px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: #1b1b1b;
-  width: 80%;
-  margin: 20px;
-}
-
-.card_body {
-  margin: 1rem;
-  color: #ebebeb;
-}
-
-.card_title {
-  font-weight: 700;
-}
-
-.card_img {
-  height: 400px;
-  object-fit: cover;
-}
-
-a {
-  text-decoration: none;
+.copy_invert {
+  color: #F8FAFA;
 }
 
 .boton {
   display: inline-block;
-  background-color: #ebebeb;
+  background-color: #F8FAFA;
   padding: 20px;
   text-decoration: none;
-  color: #1b1b1b;
+  color: #0A0D13;
   border-radius: 8px;
   transition: 0.3s;
   font-weight: 500;
 }
 
 .boton:hover {
-  background-color: #44b9e5;
-  color: #ebebeb;
-}
-
-.caja_video {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.video {
-  width: 100vw;
-}
-
-.section2 {
-  padding: 100px 0;
-  background-color: #1b1b1b;
-  display: inline-block;
-}
-
-.mockup {
-  object-fit: cover;
-  width: 100vw;
+  background-color: #00B0B9;
+  color: #F8FAFA;
 }
 
 nav {
   transition: all ease-in-out 1s;
-  background: #ebebeb;
   padding: 10px 20px;
   width: 100%;
   height: 56px;
@@ -326,121 +70,29 @@ nav {
   top: 0;
   left: 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   z-index: 10;
 }
 
 .logo_nav {
-  height: 22px;
+  height: 1.6rem;
 }
 
-nav ul {
-  list-style: none;
-  position: absolute;
-  top: 65px;
-  right: 0;
-  background: #44b9e5;
-  width: 50%;
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-  transition: 0.5s step-end;
-  z-index: 50;
-}
-
-nav ul .opciones {
-  width: 100%;
-  text-align: left;
+.carousel-caption {
   display: flex;
-  flex-direction: column;
+  top: 0;
   justify-content: center;
   align-items: center;
-  z-index: 80;
-}
-
-nav ul .opciones li {
-  width: 180px;
-  margin: 20px 0;
-}
-
-nav ul .opciones li a {
-  font-weight: 500;
-  color: #ebebeb;
-  padding: 10px 30px;
-  border-bottom: 2px solid transparent;
-  transition: all ease-in 0.8s;
-}
-
-nav ul .opciones li a:hover {
-  border-bottom: 2px solid #df4434;
-  color: #ebebeb;
-}
-
-nav .menu {
-  display: inline-block;
-  width: 14px;
-  height: 14px;
-  position: relative;
-  z-index: 20;
-  cursor: pointer;
-}
-
-nav .menu span {
-  width: 100%;
-  height: 3px;
-  border-radius: 4px;
-  display: block;
-  position: absolute;
-  background: #ebebeb;
-  transition: all 0.25s ease;
-  transform-origin: 0px 100%;
-}
-
-nav .menu span:nth-child(2) {
-  top: calc(50% - 2px);
-}
-
-nav .menu span:nth-child(3) {
-  bottom: 0;
-}
-
-.animacionMenu span:nth-child(1) {
-  transform: rotate(45deg) translate(-2px, 1px);
-}
-
-.animacionMenu span:nth-child(2) {
-  opacity: 0;
-}
-
-.animacionMenu span:nth-child(3) {
-  transform: rotate(-45deg) translate(-3px, 3px);
-}
-
-.activeMenu {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .img_carousel {
-  height: calc(100vh + 1rem);
+  object-fit: cover;
+  height: calc(100vh - 1rem);
   width: 100%;
-}
-
-#gradient {
-  width: 100%;
-  height: 800px;
-  padding: 0px;
-  margin: 0px;
-}
-
-.caja__textos {
-  margin: 0;
-  padding-bottom: 3vh;
-  text-align: left;
-  display: block;
 }
 
 .title_section1 {
-  font-size: 2rem;
-  text-align: left;
+  font-size: 3rem;
   font-weight: 300;
 }
 
@@ -461,30 +113,71 @@ nav .menu span:nth-child(3) {
 .cta {
   padding: 1rem;
   display: inline-block;
-  color: #1b1b1b;
+  color: #F8FAFA;
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
-  background: #ebebeb;
+  border: 2px solid white;
 }
 
 .cta:hover {
-  background: #44b9e5;
+  background: #00B0B9;
   transition: 0.2s ease-in-out;
-  color: #ebebeb;
+  color: #F8FAFA;
   animation: forwards;
+  border: 2px solid #00B0B9;
 }
 
-.carousel-control-next-icon:hover {
-  transition: 0.3s;
-  scale: 1.3;
-  border-radius: 100%;
+.skills {
+  padding: 2rem 0;
 }
 
-.carousel-control-prev-icon:hover {
-  transition: 0.3s;
-  scale: 1.3;
-  border-radius: 100%;
+.section_2 {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+}
+
+.mockup {
+  object-fit: cover;
+  width: 100vw;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0;
+}
+
+.card_ {
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: #0A0D13;
+  width: 80%;
+  margin: 20px;
+}
+
+.card_body {
+  margin: 1rem;
+  color: #F8FAFA;
+}
+
+.card_title {
+  font-weight: 700;
+}
+
+.card_img {
+  height: 400px;
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
 }
 
 i {
@@ -493,8 +186,8 @@ i {
 
 .footer {
   padding-block: 5rem;
-  background-color: #44b9e5;
-  color: #ebebeb;
+  background-color: #00B0B9;
+  color: #F8FAFA;
 }
 
 .footer__container {
@@ -511,7 +204,7 @@ i {
 
 .footer__title {
   font-size: 1.8rem;
-  color: #ebebeb;
+  color: #F8FAFA;
   font-weight: 500;
   margin-bottom: 2rem;
 }
@@ -533,7 +226,7 @@ i {
 }
 
 .footer__list-link:hover {
-  color: #ebebeb;
+  color: #F8FAFA;
 }
 
 .company__info {
@@ -545,7 +238,7 @@ i {
 }
 
 .company__logo {
-  color: #ebebeb;
+  color: #F8FAFA;
 }
 
 .company__info ul {
@@ -579,7 +272,7 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #1b1b1b;
+  background-color: #0A0D13;
   height: 50px;
   width: 50px;
   border-radius: 100%;
@@ -587,7 +280,7 @@ i {
 }
 
 .pasoN {
-  color: #ebebeb;
+  color: #F8FAFA;
   font-weight: 700;
   margin: 0;
   padding: 0;
@@ -603,7 +296,7 @@ i {
   max-width: 40rem;
   padding: 10rem 0;
   margin: 3vh;
-  color: #ebebeb;
+  color: #F8FAFA;
   background-color: White;
   border-radius: 1rem;
   box-shadow: 0 1px 1rem rgba(0, 0, 0, 0.1);
@@ -617,7 +310,7 @@ i {
   left: 0;
   width: 100%;
   height: 10rem;
-  background: #1b1b1b;
+  background: #0A0D13;
   border-radius: 1rem 1rem 100% 100%;
   z-index: -1;
 }
@@ -645,7 +338,7 @@ i {
 .form__input > i {
   font-size: 2rem;
   margin-right: 1rem;
-  color: #44b9e5;
+  color: #00B0B9;
 }
 
 .form__input input {
@@ -670,7 +363,7 @@ i {
 .form__input .bar::before {
   content: "";
   position: absolute;
-  background-color: #44b9e5;
+  background-color: #00B0B9;
   width: 100%;
   height: 2px;
   transform: scaleX(0);
@@ -687,8 +380,8 @@ i {
   text-align: center;
   margin: 2.5rem auto 3rem;
   padding: 1rem 5rem;
-  background: #1b1b1b;
-  color: #ebebeb;
+  background: #0A0D13;
+  color: #F8FAFA;
   font: inherit;
   border: 0.5rem solid rgb(243, 243, 243);
   outline: none;
@@ -697,7 +390,7 @@ i {
 }
 
 .form__button:hover {
-  background: #44b9e5;
+  background: #00B0B9;
   transition: 0.4s;
 }
 
@@ -710,7 +403,7 @@ i {
 
 .form__switch a {
   text-decoration: none;
-  color: #44b9e5;
+  color: #00B0B9;
 }
 
 .form__switch a:hover {
@@ -737,7 +430,7 @@ i {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #ebebeb;
+  background: #F8FAFA;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -758,12 +451,12 @@ i {
   50% {
     scale: 0.9;
     opacity: 50;
-    color: #1b1b1b;
+    color: #0A0D13;
   }
   100% {
     scale: 1;
     opacity: 100;
-    color: #44b9e5;
+    color: #00B0B9;
   }
 }
 .challenge {
@@ -824,7 +517,7 @@ i {
   scale: 1.3;
   border: none;
   border-radius: 50%;
-  background: #44b9e5;
+  background: #0A0D13;
   padding: 1rem;
   overflow: hidden;
   outline: none;
@@ -854,7 +547,7 @@ i {
 
 .shareButton svg, .shareButton.open svg {
   display: block;
-  fill: #ebebeb;
+  fill: #F8FAFA;
   width: 24px;
   height: 24px;
   opacity: 1;
