--- a/scss/_botonFlotante.scss
+++ b/scss/_botonFlotante.scss
@@ -51,7 +51,7 @@
   scale: 1.3;
   border: none;
   border-radius: 50%;
-  background: $VeertienBlue;
+  background:  $VeertienBlack;
   padding: 1rem;
   overflow: hidden;
   outline: none;
