--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+main {
+  background-color: $VeertienWhite;
+}
 body {
   font-size: 1rem;
   font-family: "Amiko", sans-serif;
@@ -15,251 +18,24 @@ a:active {
   text-decoration: none;
 }
 .title {
+  font-size: 2.5rem;
   display: inline-block;
   padding: 5vh;
   text-align: center;
   color: $VeertienBlack;
 }
 .copy {
+  font-size: 1rem;
   display: inline-block;
   text-align: left;
   padding: 0 3vh;
   padding-bottom: 3vh;
 }
-.titleB {
-  text-align: center;
-  padding: 3vh 0;
+.title_invert{
   color: $VeertienWhite;
 }
-.subtitle {
-  margin: 0 20px;
-  padding: 0;
-}
-main {
-  background-color: $VeertienWhite;
-}
-.skills {
-  background-color: $VeertienBlack;
-}
-.img_carousel {
-  height: 200px;
-  scale: 1.5;
-}
-.carousel {
-  display: inline-block;
-}
-.content {
-  width: 240px;
-  font-size: 1rem;
-  line-height: 40px;
+.copy_invert{
   color: $VeertienWhite;
-  height: 40px;
-  position: relative;
-  margin: 10vh auto;
-
-  &:before {
-    content: "[";
-    position: absolute;
-    left: -50px;
-    line-height: 40px;
-  }
-  &:after {
-    content: "]";
-    position: absolute;
-    right: -50px;
-    line-height: 40px;
-  }
-  &:after,
-  &:before {
-    color: $VeertienWhite;
-    font-size: 42px;
-    animation: 2s linear 0s normal none infinite opacity;
-    -webkit-animation: 2s ease-out 0s normal none infinite opacity;
-    -moz-animation: 2s ease-out 0s normal none infinite opacity;
-    -o-animation: 2s ease-out 0s normal none infinite opacity;
-  }
-}
-
-.visible {
-  float: left;
-  font-weight: 600;
-  overflow: hidden;
-  height: 40px;
-}
-
-.p_nav {
-  display: inline;
-  float: left;
-  margin: 0;
-}
-
-.ul_nav {
-  margin-top: 0;
-  padding-left: 100px;
-  text-align: left;
-  list-style: none;
-  animation: 6s linear 0s normal none infinite change;
-  -webkit-animation: 6s linear 0s normal none infinite change;
-  -moz-animation: 6s linear 0s normal none infinite change;
-  -o-animation: 6s linear 0s normal none infinite change;
-}
-
-.ul_nav .li_mav {
-  line-height: 40px;
-  margin: 0;
-}
-
-@-webkit-keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes change {
-  0% {
-    margin-top: 0;
-  }
-  15% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -40px;
-  }
-  40% {
-    margin-top: -40px;
-  }
-  50% {
-    margin-top: -80px;
-  }
-  65% {
-    margin-top: -80px;
-  }
-  75% {
-    margin-top: -40px;
-  }
-  85% {
-    margin-top: -40px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-@keyframes change {
-  0% {
-    margin-top: 0;
-  }
-  15% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -40px;
-  }
-  40% {
-    margin-top: -40px;
-  }
-  50% {
-    margin-top: -80px;
-  }
-  65% {
-    margin-top: -80px;
-  }
-  75% {
-    margin-top: -40px;
-  }
-  85% {
-    margin-top: -40px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-
-.descubrinos {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-.filosofia {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 100px 20px;
-  padding: 20px;
-  border-radius: 20px;
-  background-size: cover;
-  background-image: url(/img/sea-7423274_640.jpg);
-}
-.filo_img {
-  filter: invert(1);
-}
-.filo_imgb {
-  margin: 100px 0;
-  height: 200px;
-  transition: 0.5s;
-}
-.front_filo_img {
-  position: relative;
-}
-.back_filo_img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-}
-
-.filo_imgb:active {
-  translate: 35vw;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 0;
-}
-.card_ {
-  border-radius: 8px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: $VeertienBlack;
-  width: 80%;
-  margin: 20px;
-}
-.card_body {
-  margin: 1rem;
-  color: $VeertienWhite;
-}
-.card_title {
-  font-weight: 700;
-}
-
-.card_img {
-  height: 400px;
-  object-fit: cover;
-}
-a {
-  text-decoration: none;
 }
 .boton {
   display: inline-block;
@@ -275,23 +51,4 @@ a {
   background-color: $VeertienBlue;
   color: $VeertienWhite;
 }
-.caja_video {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-.video {
-  width: 100vw;
-}
 
-
-.section2{
-  padding: 100px 0;
-  background-color: $VeertienBlack;
-  display: inline-block;
-}
-.mockup{
-  object-fit: cover;
-  width: 100vw;
-}
