--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,23 +1,18 @@
-.img_carousel{
-height: calc(100vh + 1rem);
- width: 100%;
+.carousel-caption{
+  display: flex;
+  top: 0;
+  justify-content: center;
+  align-items: center;
 }
-#gradient
-{
+ 
+ .img_carousel{
+  object-fit: cover;
+  height: calc(100vh - 1rem);
   width: 100%;
-  height: 800px;
-  padding: 0px;
-  margin: 0px;
 }
-.caja__textos {
-  margin: 0;
-  padding-bottom: 3vh;
-  text-align: left;
-  display: block;
-}
+
 .title_section1 {
-  font-size: 2rem;
-  text-align: left;
+  font-size: 3rem;
   font-weight: 300;
 }
 
@@ -36,11 +31,11 @@ height: calc(100vh + 1rem);
 .cta {
   padding: 1rem;
   display: inline-block;
-  color:$VeertienBlack;
+  color:$VeertienWhite;
   text-decoration: none;
   font-weight: 700;
   border-radius: 6px;
-  background: $VeertienWhite;
+  border: 2px solid white;
 }
 
 .cta:hover {
@@ -48,17 +43,5 @@ height: calc(100vh + 1rem);
   transition: 0.2s ease-in-out;
   color: $VeertienWhite;
   animation: forwards;
+  border: 2px solid $VeertienBlue;
 }
-
-.carousel-control-next-icon:hover {
-  transition: 0.3s;
-  scale: 1.3;
-  border-radius: 100%;
-}
-.carousel-control-prev-icon:hover {
-  transition: 0.3s;
-  scale: 1.3;
-  border-radius: 100%;
-}
-
-
