--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,4 @@
-$VeertienBlue:#44b9e5;
-$VeertienWhite: #ebebeb;
-$VeertienBlack: #1b1b1b;
+$VeertienBlue:#00B0B9;
+$VeertienWhite: #F8FAFA;
+$VeertienBlack: #0A0D13;
 $VeertienRed: #df4434;
