--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,9 @@
 @import "_commons.scss";
 @import "_nav";
 @import "_section1";
+@import "_section2";
+@import "_section3";
+@import "_cards";
 @import "_media";
 @import "_footer";
 @import "_pasos";
