--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -12,6 +12,12 @@ body {
   font-size: 1rem;
   font-family: "Amiko", sans-serif;
 }
+section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 a:link,
 a:visited,
 a:active {
@@ -19,15 +25,17 @@ a:active {
 }
 .title {
   font-size: 2.5rem;
-  display: inline-block;
-  padding: 5vh;
-  text-align: center;
+  margin: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: $VeertienBlack;
 }
 .copy {
   font-size: 1rem;
   display: inline-block;
-  text-align: left;
+  text-align:center;
+  text-justify: auto;
   padding: 0 3vh;
   padding-bottom: 3vh;
 }
@@ -52,3 +60,20 @@ a:active {
   color: $VeertienWhite;
 }
 
+.title_button_container{
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+}
+.title_button{
+  font-size: 1rem;
+  color: $VeertienWhite;
+  text-decoration: none;
+  transition: .5s;
+}
+.title_button:hover{
+  color: $VeertienBlue;
+}
