--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "_vars";
 @import "_commons.scss";
 @import "_nav";
+@import "_section0";
 @import "_section1";
 @import "_section2";
 @import "_section3";
