--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 main {
@@ -12,6 +13,9 @@ main {
 
 body {
   font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: "Amiko", sans-serif;
 }
 
@@ -33,17 +37,14 @@ a:active {
 }
 
 .title {
-  font-size: 2.5rem;
+  text-align: center;
+  font-size: 3rem;
   margin: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #0A0D13;
 }
 
 .copy {
   font-size: 1rem;
-  display: inline-block;
   text-align: center;
   text-justify: auto;
   padding: 0 3vh;
@@ -59,7 +60,6 @@ a:active {
 }
 
 .boton {
-  display: inline-block;
   background-color: #F8FAFA;
   padding: 20px;
   text-decoration: none;
@@ -83,7 +83,7 @@ a:active {
 }
 
 .title_button {
-  font-size: 1rem;
+  font-size: 1, 4rem;
   color: #F8FAFA;
   text-decoration: none;
   transition: 0.5s;
@@ -111,7 +111,7 @@ nav {
 }
 
 .logo_nav {
-  height: 1.6rem;
+  height: 2rem;
 }
 
 .section0 {
@@ -142,13 +142,6 @@ nav {
     text-shadow: 0 0 8px #00B0B9;
   }
 }
-.carousel-caption {
-  display: flex;
-  top: 0;
-  justify-content: center;
-  align-items: center;
-}
-
 .img_carousel {
   object-fit: cover;
   height: 100vh;
@@ -156,18 +149,39 @@ nav {
 }
 
 .title_section1 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 300;
+}
+.title_section1 span {
+  font-size: inherit;
+}
+
+.caja__textos {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
 }
 
 .title__active {
+  font-size: 4rem;
   font-weight: 700;
   transform-origin: center;
   transition: opacity 0.5s ease-in-out;
 }
 
 .text {
-  font-size: 1rem;
+  width: 80%;
+  margin: 0 0rem;
+  font-size: 2rem;
+}
+.text span {
+  font-size: inherit;
 }
 
 .text__active {
@@ -176,7 +190,7 @@ nav {
 
 .cta {
   padding: 1rem;
-  display: inline-block;
+  margin: 1rem 0;
   color: #F8FAFA;
   text-decoration: none;
   font-weight: 700;
@@ -319,9 +333,9 @@ nav {
 .widget-container {
   padding: 2rem;
   border-radius: 15px;
-  background: rgba(10, 13, 19, 0.062745098);
-  box-shadow: 0 3px 60px black;
-  box-shadow: none;
+  box-shadow: 0 0 14px rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0 0 14px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0 0 14px rgba(0, 0, 0, 0.14);
 }
 
 .tab-container .tab-content.tab-active {
@@ -348,7 +362,6 @@ i {
 }
 
 .footer__container {
-  max-width: 116rem;
   margin: auto;
   padding: 0 1.5rem;
 }
@@ -391,7 +404,6 @@ i {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding-right: 5rem;
 }
 
 .company__logo {
@@ -654,7 +666,7 @@ i {
   scale: 1.3;
   border: none;
   border-radius: 50%;
-  background: #0A0D13;
+  background: #00B0B9;
   padding: 1rem;
   overflow: hidden;
   outline: none;
@@ -730,22 +742,17 @@ i {
 }
 
 .progress-bar-container {
+  background-color: black;
   font-size: 1rem;
   font-weight: 700;
   position: fixed;
   width: 56px;
   height: 100px;
-  margin-top: calc(50vh - 100px);
+  margin-top: calc(20vh - 100px);
   z-index: 999;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row-reverse;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
   translate: -30px;
+  transition: ease-in 1s;
+  transition-delay: 1s;
   -webkit-transition: all 200ms;
   transition: all 200ms;
 }
@@ -759,7 +766,7 @@ i {
   align-items: center;
   padding: 3vh 0;
   transform: rotate(270deg);
-  translate: 0.9rem;
+  translate: 95vw;
 }
 
 .progress-bar-text span.active {
