--- a/scss/_botonFlotante.scss
+++ b/scss/_botonFlotante.scss
@@ -33,7 +33,7 @@
   scale: 1.3;
   border: none;
   border-radius: 50%;
-  background:  $VeertienBlack;
+  background:  $VeertienBlue;
   padding: 1rem;
   overflow: hidden;
   outline: none;
@@ -105,27 +105,20 @@
 }
 
 .progress-bar-container {
+  background-color: black;
   font-size: 1rem;
   font-weight: 700;
   position: fixed;
   width: 56px;
   height: 100px;
-  margin-top: calc(50vh - 100px);
+  margin-top: calc(20vh - 100px);
   z-index: 999;
   a{
     color: $VeertienWhite;
   }
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row-reverse;
-  -webkit-box-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-          align-items: center;
   translate: -30px;
-  // transition: ease-in 1s;
-  // transition-delay: 1s;
+  transition: ease-in 1s;
+  transition-delay: 1s;
   -webkit-transition: all 200ms;
   transition: all 200ms;
 }
@@ -134,10 +127,10 @@
   justify-content: center;
   align-items: center;
   padding: 3vh 0;
-  //justify-content: center;
-  //align-items: center;
+  // justify-content: center;
+  // align-items: center;
   transform: rotate(270deg);
-  translate: .9rem;
+  translate: 95vw;
 }
 
 .progress-bar-text span.active {
