--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,28 +1,44 @@
-.carousel-caption{
-  display: flex;
-  top: 0;
-  justify-content: center;
-  align-items: center;
-}
- 
- .img_carousel{
+.img_carousel{
   object-fit: cover;
   height: 100vh;
   width: 100vw;
 }
 
 .title_section1 {
-  font-size: 3rem;
+  //text-align: center;
+  font-size: 4rem;
   font-weight: 300;
+  span{
+    font-size: inherit;
+  }
 }
 
+.caja__textos{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+
 .title__active {
+  font-size: 4rem;
   font-weight: 700;
   transform-origin: center;
   transition: opacity 0.5s ease-in-out;
 }
 .text{
-  font-size: 1rem;
+  width: 80%;
+  margin: 0 0rem;
+  font-size: 2rem;
+  span{
+    font-size: inherit;
+  }
 }
 .text__active {
   font-weight: 700;
@@ -30,7 +46,7 @@
 
 .cta {
   padding: 1rem;
-  display: inline-block;
+  margin: 1rem 0;
   color:$VeertienWhite;
   text-decoration: none;
   font-weight: 700;
@@ -45,4 +61,3 @@
   animation: forwards;
   border: 2px solid $VeertienBlue;
 }
-
