--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -72,8 +72,9 @@ a:active {
 
 }
 .title_button{
-  font-size: 1,4rem;
-  color: $VeertienWhite;
+  margin: 1rem;
+  font-size: 1.4rem;
+  color: $VeertienBlack;
   text-decoration: none;
   transition: .5s;
 }
